# Neural-Network-From-Scratch

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: Layer.h  MNIST_dataloader.h  MathUtility.h  Matrix.h  NeuralNetwork.h  Neuron.h
src/: CMakeLists.txt  Layer.cpp  MNIST_dataloader.cpp  MathUtility.cpp  Matrix.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp
tests/: CMakeLists.txt  LayerTest.cpp  MathUtilityTest.cpp  MatrixTest.cpp  NeuralNetworkTest.cpp  NeuronTest.cpp
